// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c1:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={true}
    type="text"
  />
</div>
`;

exports[`Input placeholder 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c1:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    placeholder="test"
    type="text"
  />
</div>
`;

exports[`Input renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 4px;
  border: 1px solid #DADADA;
  box-shadow: none;
  caret-color: #757575;
  color: #757575;
  display: block;
  font-size: 14px;
  height: 36px;
  line-height: 14;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  margin-bottom: 64px;
  outline: none;
}

.c1:disabled {
  color: #999999;
  background-color: #EBEBEB;
  cursor: not-allowed;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    type="text"
  />
</div>
`;
